2010-09-08  Robert Larice
 * src/frontend/display.c ,
 * src/include/ftedev.h :
    function rename, struct DISPDEVICE . Text() -> DrawText()

2010-09-08  Robert Larice
 * src/frontend/display.c ,
 * src/include/ftedev.h :
    function rename, struct DISPDEVICE . Arc() -> DrawArc()

2010-09-08  Robert Larice
 * src/frontend/display.c ,
 * src/frontend/display.h ,
 * src/frontend/plotting/graf.c ,
 * src/frontend/plotting/grid.c :
    function rename, Update() -> DevUpdate()

2010-09-08  Robert Larice
 * src/frontend/display.c ,
 * src/frontend/display.h ,
 * src/frontend/plotting/graf.c ,
 * src/frontend/plotting/grid.c :
    function rename, DrawLine() -> DevDrawLine()

2010-09-08  Robert Larice
 * src/frontend/display.c ,
 * src/frontend/display.h ,
 * src/frontend/plotting/graf.c ,
 * src/frontend/plotting/grid.c ,
 * src/frontend/plotting/x11.c :
    function rename, Text() -> DevDrawText()

2010-09-08  Robert Larice
 * src/frontend/display.c ,
 * src/frontend/display.h ,
 * src/frontend/plotting/grid.c ,
 * src/frontend/wdisp/windisp.c ,
 * src/frontend/wdisp/winprint.c :
    function rename, Arc() -> DevDrawArc()

2010-09-08  Robert Larice
 * README.adms ,
 * autogen.sh ,
 * configure.ac ,
 * configure.in ,
 * src/frontend/cpitf.c ,
 * src/misc/ivars.c :
    rename configure.in -> configure.ac

2010-09-08 Holger Vogt
 * visualc/include/config.h, vngspice.sln, vngspice.vcproj:
   prepare for ngspice22

2010-09-07  Robert Larice
 * src/frontend/parse.c ,
 * src/include/fteparse.h ,
 * src/spicelib/parser/inpptree.c :
    muffle some visual-C warnings
        data pointer -> function pointer conversion
    void* versus void(*)(void)

2010-09-07  Robert Larice
 * ng-spice-rework/src/maths/misc/randnumb.c :
    convert K&R function definitions to ansi style

2010-09-07  Robert Larice
 * src/xspice/ipc/ipcstdio.c :
    convert K&R function definitions to ansi style

2010-09-07  Robert Larice
 * src/frontend/inpcom.c ,
 * src/frontend/plotting/x11.c ,